--- a/Css/Index.css
+++ b/Css/Index.css
@@ -3,10 +3,46 @@ h1  {
 }
 
 .link-top {
-    color: black !important;
+    color: white !important;
 }
 
 a:hover {
     color:  #228b22 !important;
 }
+
+@media (min-width: 200px) and (max-width: 576px)    {
+    #hero-section {
+      border-bottom-left-radius: 1000px;
+    }
+
+}
+
+
+
+@media (min-width: 200px)   {
+    #hero-section   {
+        height: 60vh;
+    }
+
+}   
+
+@media (min-width: 200px) and (max-width: 576px)    {
+    #hero{
+        margin-top: 2rem;
+    }
+
+    
+}
+
+@media (min-width: 992px)   {
+    #hero   {
+        margin-top: 10rem;
+    }
+
+    #hero-section   {
+        height: 70vh;
+    }
+
+}
+
 
