--- a/Css/Index.css
+++ b/Css/Index.css
@@ -3,10 +3,32 @@ h1  {
 }
 
 .link-top {
-    color: black !important;
+    color: white !important;
 }
 
 a:hover {
     color:  #228b22 !important;
+}
+
+
+
+@media (min-width: 200px)   {
+    #hero-section   {
+        height: 60vh;
+    }
+
+}   
+    
+}
+
+@media (min-width: 992px)   {
+    #hero   {
+        margin-top: 10rem;
+    }
+
+    #hero-section   {
+        height: 70vh;
+    }
+
 }
 
